add require args constructor support